Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132314

GPU driver crash in iOS 18

XMLWordPrintable

    • iOS/tvOS/watchOS
    • c812190a9 (dev), 1b993a787 (6.9), 9271068f9 (6.8), 972f5b94b (tqtc/lts-6.5), 4e860014c (tqtc/lts-5.15)

      Steps to reproduce

      1. Build the OpenGL Window example (https://doc.qt.io/qt-5/qtgui-openglwindow-example.html) for iPadOS
      2. Install it on iPad 7 running iPadOS 18.0 or later using Xcode
      3. Run the app - It should work fine
      4. Attempt to put it into split screen mode - The app will likely crash
        • This is shown in the OS freezing when dragging the 3 dots to use split screen
        • The app can also freeze if you manage to split screen this with a different app, then attempt to resize the screens
        • It might not always crash, but attempt this a few times and you should see the issue

       

      Crash messages

      There are two different messages observed in different tests:

      ASSERT failure in QIOSContext: "swapBuffers on incomplete FBO", file /Users/qt/work/qt/qtbase/src/plugins/platforms/ios/qioscontext.mm, line 196
      
      Terminating due to blacklisting by kernel driver
      

       

      Notes

      • Earlier versions of iOS were fine; the crashing began after upgrading to iOS 18
      • The customer's 2 real apps are complex Qt Quick apps. Crashes have been observed when the QSGRenderThread calls the following functions:
        • QIOSContext::swapBuffers()
        • QOpenGLFunctions::glClear()
      • This was reproducible on an iPad 7 (A10 Fusion chip) running iPadOS 18.1.1/18.2.
      • This was not reproducible on an iPad Mini 6th Gen (A15 Bionic chip) running iPadOS 18.1.1, or an iPad Air 5th Gen (M1 chip) running iPadOS 18.2

        1. xcode-debugger-output.png
          233 kB
          Sze Howe Koh
        2. QTBUG-132314 iPad 7 Crashlogs.zip
          32 kB
          Lars Slowak
        3. logs 18-Feb-2025.zip
          22 kB
          Junlin Zhou
        4. log before crash.txt
          4 kB
          Lars Slowak
        5. image-2025-02-19-21-07-17-412.png
          202 kB
          Tor Arne Vestbø
        6. qt-scenegraph.zip
          15 kB
          Junlin Zhou
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            skoh-qt Sze Howe Koh
            Votes:
            6 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: